--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
   "homepage": "https://github.com/inglish2022/jest-another-RPG#readme",
   "devDependencies": {
     "jest": "^28.0.1"
+  },
+  "dependencies": {
+    "inquirer": "^8.2.4"
   }
 }
